force-app/main/default/objects/PickupRequest__c/fields/OtherAA_Place__c.field-meta.xml
<CustomField>
    <fullName>OtherAA_Place__c</fullName>
    <description>喜多</description>
    <label>出品会場</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>USS札幌</fullName>
            </value>
            <value>
                <fullName>USS東北</fullName>
            </value>
            <value>
                <fullName>USS群馬</fullName>
            </value>
            <value>
                <fullName>USS東京</fullName>
            </value>
            <value>
                <fullName>USS埼玉</fullName>
            </value>
            <value>
                <fullName>USS横浜</fullName>
            </value>
            <value>
                <fullName>USS新潟</fullName>
            </value>
            <value>
                <fullName>USS北陸</fullName>
            </value>
            <value>
                <fullName>USS静岡</fullName>
            </value>
            <value>
                <fullName>USS名古屋</fullName>
            </value>
            <value>
                <fullName>USS名古屋/J-BOYリスト代筆</fullName>
            </value>
            <value>
                <fullName>USS R名古屋</fullName>
            </value>
            <value>
                <fullName>USS大阪</fullName>
            </value>
            <value>
                <fullName>USS神戸</fullName>
            </value>
            <value>
                <fullName>USS四国</fullName>
            </value>
            <value>
                <fullName>USS岡山</fullName>
            </value>
            <value>
                <fullName>USS福岡</fullName>
            </value>
            <value>
                <fullName>USS九州</fullName>
            </value>
            <value>
                <fullName>USS鹿児島サイト</fullName>
            </value>
            <value>
                <fullName>HAA神戸</fullName>
            </value>
            <value>
                <fullName>HAA神戸/J-BOYリスト代筆</fullName>
            </value>
            <value>
                <fullName>IAA大阪</fullName>
            </value>
            <value>
                <fullName>TAA北海道</fullName>
            </value>
            <value>
                <fullName>TAA東北</fullName>
            </value>
            <value>
                <fullName>TAA関東</fullName>
            </value>
            <value>
                <fullName>TAA横浜</fullName>
            </value>
            <value>
                <fullName>TAA中部</fullName>
            </value>
            <value>
                <fullName>TAA近畿</fullName>
            </value>
            <value>
                <fullName>TAA兵庫</fullName>
            </value>
            <value>
                <fullName>TAA広島</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>