force-app/main/default/objects/PickupRequest__c/fields/Phone_person_in_charge__c.field-meta.xml
<CustomField>
    <fullName>Phone_person_in_charge__c</fullName>
    <description>山本</description>
    <formula>Owner:User.MobilePhone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>電話番号（営業担当）</label>
    <type>Text</type>
</CustomField>