force-app/main/default/objects/PickupRequest__c/fields/Pickup_Preferred_date_MVR__c.field-meta.xml
<CustomField>
    <fullName>Pickup_Preferred_date_MVR__c</fullName>
    <formula>TEXT( Pickup_Preferred_date__c )&amp;&quot;,&quot;&amp;TEXT( Pickup_Preferred_date2__c )&amp;&quot;,&quot;&amp; TEXT( Pickup_Preferred_date3__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>希望日（MVR）</label>
    <type>Text</type>
</CustomField>