force-app/main/default/objects/PickupRequest__c/fields/PickupPreferredDate_Weekday__c.field-meta.xml
<CustomField>
    <fullName>PickupPreferredDate_Weekday__c</fullName>
    <formula>CASE( WEEKDAY(  Pickup_Preferred_date__c ) ,
1,&quot;1.日曜日&quot;,
2,&quot;2.月曜日&quot;,
3,&quot;3.火曜日&quot;,
4,&quot;4.水曜日&quot;,
5,&quot;5.木曜日&quot;,
6,&quot;6.金曜日&quot;,
7,&quot;7.土曜日&quot;,
&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>引取希望日1の曜日</label>
    <type>Text</type>
</CustomField>