force-app/main/default/objects/PickupRequest__c/fields/PickupTimezone__c.field-meta.xml
<CustomField>
    <fullName>PickupTimezone__c</fullName>
    <defaultValue>false</defaultValue>
    <description>佐野作成(喜多依頼分)</description>
    <label>引取先時間帯指定</label>
    <type>Checkbox</type>
</CustomField>