force-app/main/default/objects/PickupRequest__c/fields/PossiblePickUpTime_CallA__c.field-meta.xml
<CustomField>
    <fullName>PossiblePickUpTime_CallA__c</fullName>
    <label>業者引取可能時間</label>
    <type>TextArea</type>
</CustomField>