force-app/main/default/objects/PickupRequest__c/fields/Precautions_Memo__c.field-meta.xml
<CustomField>
    <fullName>Precautions_Memo__c</fullName>
    <label>物流/MVRへの連絡事項</label>
    <type>TextArea</type>
</CustomField>