force-app/main/default/objects/PickupRequest__c/fields/Precautions_Memo_MVR__c.field-meta.xml
<CustomField>
    <fullName>Precautions_Memo_MVR__c</fullName>
    <formula>Precautions_Memo__c &amp; BR() &amp; Pickup_precautions__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>注意事項・メモ（MVR）</label>
    <type>Text</type>
</CustomField>