force-app/main/default/objects/PickupRequest__c/fields/PrecautionToDriver_zero__c.field-meta.xml
<CustomField>
    <fullName>PrecautionToDriver_zero__c</fullName>
    <description>佐野作成(喜多依頼分)</description>
    <formula>TEXT(1) &amp; TEXT(1) &amp; IF( LEN( Bringingin_Yard__r.Yard_code__c ) &gt;= 7 &amp;&amp; BEGINS( Bringingin_Yard__r.Yard_code__c , &quot;YA92&quot; ), TEXT(1), TEXT(0) ) &amp; IF( LEN( Bringingin_Yard__r.Yard_code__c ) &gt;= 7 &amp;&amp; BEGINS( Bringingin_Yard__r.Yard_code__c , &quot;YA92&quot; ), TEXT(1), TEXT(0) )</formula>
    <label>ドライバー連絡事項（ゼロ連携用）</label>
    <type>Text</type>
</CustomField>