force-app/main/default/objects/PickupRequest__c/fields/ReFAX__c.field-meta.xml
<CustomField>
    <fullName>ReFAX__c</fullName>
    <description>佐野作成(喜多依頼分)</description>
    <label>ReFAX確認日</label>
    <type>Date</type>
</CustomField>