force-app/main/default/objects/PickupRequest__c/fields/RegistrationNo__c.field-meta.xml
<CustomField>
    <fullName>RegistrationNo__c</fullName>
    <description>山本</description>
    <formula>IF( NOT( ISBLANK(  Case__c )),  Case__r.RegistrationNo__c , PurchaseOpportunity__r.RegistrationNo__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>登録番号（MVR）</label>
    <type>Text</type>
</CustomField>