force-app/main/default/objects/PickupRequest__c/fields/RegularHoliday__c.field-meta.xml
<CustomField>
    <fullName>RegularHoliday__c</fullName>
    <label>定休日</label>
    <length>50</length>
    <type>Text</type>
</CustomField>