force-app/main/default/objects/PickupRequest__c/fields/RegularHoliday_MVR__c.field-meta.xml
<CustomField>
    <fullName>RegularHoliday_MVR__c</fullName>
    <formula>RegularHoliday__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>定休日（MVR）</label>
    <type>Text</type>
</CustomField>