force-app/main/default/objects/PickupRequest__c/fields/repairPickup__c.field-meta.xml
<CustomField>
    <fullName>repairPickup__c</fullName>
    <description>佐野
買取商談の修理車両と連携</description>
    <formula>PurchaseOpportunity__r.RepairCar__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>修理車両</label>
    <type>Checkbox</type>
</CustomField>