force-app/main/default/objects/PickupRequest__c/fields/RequestDestination__c.field-meta.xml
<CustomField>
    <fullName>RequestDestination__c</fullName>
    <description>喜多</description>
    <label>段取対応部署</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>営業</fullName>
            </value>
            <value>
                <fullName>リユース</fullName>
            </value>
            <value>
                <fullName>物流</fullName>
            </value>
            <value>
                <fullName>MVR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>