force-app/main/default/objects/PickupRequest__c/fields/Requestform__c.field-meta.xml
<CustomField>
    <fullName>Requestform__c</fullName>
    <description>与儀</description>
    <label>依頼書送信日</label>
    <type>Date</type>
</CustomField>