force-app/main/default/objects/PickupRequest__c/fields/RequestMonthly__c.field-meta.xml
<CustomField>
    <fullName>RequestMonthly__c</fullName>
    <formula>MONTH( ScheduleAdjustmentRequestDate__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>日程調整依頼月度</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>