force-app/main/default/objects/PickupRequest__c/fields/Sales_Reuse__c.field-meta.xml
<CustomField>
    <fullName>Sales_Reuse__c</fullName>
    <formula>IF( NOT( ISBLANK(  PurchaseOpportunity__c )),&quot;営業案件&quot;,
 IF( NOT( ISBlANK(  Case__c )),&quot;リユース事業部案件&quot;,&quot;&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>営業/リユース区分</label>
    <type>Text</type>
</CustomField>