force-app/main/default/objects/PickupRequest__c/fields/Sales_UserCode_MVR__c.field-meta.xml
<CustomField>
    <fullName>Sales_UserCode_MVR__c</fullName>
    <formula>IF ( NOT( ISBLANK( Case__c ) ) , Case__r.Owner:User.UserCode__c ,
IF( AccountName_MVR__c =&quot;ソコカラセレクト岸和田&quot;,&quot;H8888888&quot;,
 PurchaseOpportunity__r.Owner:User.UserCode__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>営業担当コード（MVR）</label>
    <type>Text</type>
</CustomField>