force-app/main/default/objects/PickupRequest__c/fields/SalesManagement__c.field-meta.xml
<CustomField>
    <fullName>SalesManagement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>山本</description>
    <label>営業管理</label>
    <referenceTo>SalesManagement__c</referenceTo>
    <relationshipLabel>引取依頼</relationshipLabel>
    <relationshipName>SalesManagement_PickupRequest</relationshipName>
    <type>Lookup</type>
</CustomField>