force-app/main/default/objects/PickupRequest__c/fields/ScheduleAdjustmentRequestDate__c.field-meta.xml
<CustomField>
    <fullName>ScheduleAdjustmentRequestDate__c</fullName>
    <label>引取依頼作成日</label>
    <type>Date</type>
</CustomField>