force-app/main/default/objects/PickupRequest__c/fields/ScheduledDeliveryDate__c.field-meta.xml
<CustomField>
    <fullName>ScheduledDeliveryDate__c</fullName>
    <description>佐野作成(喜多依頼分)</description>
    <label>搬入予定日TO</label>
    <type>Date</type>
</CustomField>