force-app/main/default/objects/PickupRequest__c/fields/ScheduledDeliveryDate_From__c.field-meta.xml
<CustomField>
    <fullName>ScheduledDeliveryDate_From__c</fullName>
    <description>佐野作成(喜多依頼分)</description>
    <label>搬入予定日FROM</label>
    <type>Date</type>
</CustomField>