force-app/main/default/objects/PickupRequest__c/fields/ScheduledDeliveryTime_FromTo__c.field-meta.xml
<CustomField>
    <fullName>ScheduledDeliveryTime_FromTo__c</fullName>
    <description>佐野作成(喜多依頼分)</description>
    <label>納車予定時間FROM-TO</label>
    <length>20</length>
    <type>Text</type>
</CustomField>