force-app/main/default/objects/PickupRequest__c/fields/ScheduledPickupDate__c.field-meta.xml
<CustomField>
    <fullName>ScheduledPickupDate__c</fullName>
    <label>引取予定日FROM</label>
    <type>Date</type>
</CustomField>