force-app/main/default/objects/PickupRequest__c/fields/ScheduledPickupTime_FromTo__c.field-meta.xml
<CustomField>
    <fullName>ScheduledPickupTime_FromTo__c</fullName>
    <description>佐野作成(喜多依頼分)</description>
    <label>引取予定時間FROM-TO</label>
    <length>20</length>
    <type>Text</type>
</CustomField>