force-app/main/default/objects/PickupRequest__c/fields/Setup_staff__c.field-meta.xml
<CustomField>
    <fullName>Setup_staff__c</fullName>
    <label>段取担当</label>
    <length>50</length>
    <type>Text</type>
</CustomField>