force-app/main/default/objects/PickupRequest__c/fields/signboard_peeling__c.field-meta.xml
<CustomField>
    <fullName>signboard_peeling__c</fullName>
    <description>与儀</description>
    <label>剥離</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>不要</fullName>
            </value>
            <value>
                <fullName>養生・ガムテ</fullName>
            </value>
            <value>
                <fullName>塗抹（塗りつぶし）</fullName>
            </value>
            <value>
                <fullName>完全剥離</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>