force-app/main/default/objects/PickupRequest__c/fields/Space_MVR__c.field-meta.xml
<CustomField>
    <fullName>Space_MVR__c</fullName>
    <formula>TEXT( Space__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>スペース有無（MVR）</label>
    <type>Text</type>
</CustomField>