force-app/main/default/objects/PickupRequest__c/fields/SpecifyDeliveryTimezone__c.field-meta.xml
<CustomField>
    <fullName>SpecifyDeliveryTimezone__c</fullName>
    <defaultValue>false</defaultValue>
    <description>佐野作成(喜多依頼分)</description>
    <label>搬入先時間帯指定</label>
    <type>Checkbox</type>
</CustomField>