force-app/main/default/objects/PickupRequest__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <formula>IF ( NOT( ISBLANK( PurchaseOpportunity__c ) ) ,TEXT( PurchaseOpportunity__r.State__c ),
CASE( Case__r.CarClass__c , &quot;事故車&quot; , &quot;事故車&quot; ,&quot;故障車&quot; , &quot;故障車&quot; , &quot;冠水車&quot; ,&quot;水害車&quot; ,&quot;中古車&quot; , &quot;中古車&quot; , &quot;&quot;) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>状態</label>
    <type>Text</type>
</CustomField>