force-app/main/default/objects/PickupRequest__c/fields/State_City__c.field-meta.xml
<CustomField>
    <fullName>State_City__c</fullName>
    <description>山本</description>
    <formula>IF (NOT( ISBLANK( Case__c )), Case__r.LocationAddress_State_hs__c &amp; Case__r.LocationAddress_City_hs__c , StorageLocation__r.BillingState &amp; StorageLocation__r.BillingCity )</formula>
    <label>保管先住所（県/市）</label>
    <type>Text</type>
</CustomField>