force-app/main/default/objects/PickupRequest__c/fields/State_MVR__c.field-meta.xml
<CustomField>
    <fullName>State_MVR__c</fullName>
    <formula>State__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>状態（MVR）</label>
    <type>Text</type>
</CustomField>