force-app/main/default/objects/PickupRequest__c/fields/Storage_Location_Address__c.field-meta.xml
<CustomField>
    <fullName>Storage_Location_Address__c</fullName>
    <description>喜多</description>
    <formula>IF (NOT( ISBLANK( Case__c )), Case__r.LocationAddress_hs__c, PurchaseOpportunity__r.StorageLocationAddress__c )</formula>
    <label>保管先住所</label>
    <type>Text</type>
</CustomField>