force-app/main/default/objects/PickupRequest__c/fields/storage_pref__c.field-meta.xml
<CustomField>
    <fullName>storage_pref__c</fullName>
    <description>買取受付の保管場所住所もしくは買取受付の保管先住所から都道府県を切り出し。山本</description>
    <formula>IF(
    NOT(ISBLANK(Case__c)),
    Case__r.LocationAddress_State_hs__c ,
    LEFT(PurchaseOpportunity__r.StorageLocationAddress__c, IF(MID(PurchaseOpportunity__r.StorageLocationAddress__c, 4, 1) = &quot;県&quot;, 4, 3))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>都道府県（保管先）</label>
    <type>Text</type>
</CustomField>