force-app/main/default/objects/PickupRequest__c/fields/StorageLocation__c.field-meta.xml
<CustomField>
    <fullName>StorageLocation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>保管先名1</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>引取依頼</relationshipLabel>
    <relationshipName>Account_StorageLocation</relationshipName>
    <type>Lookup</type>
</CustomField>