force-app/main/default/objects/PickupRequest__c/fields/StorageLocation_Abbreviation__c.field-meta.xml
<CustomField>
    <fullName>StorageLocation_Abbreviation__c</fullName>
    <formula>IF( NOT( ISBLANK( StorageLocation_CallA__c ) ), StorageLocation_CallA__c ,
IF( AND( ISBLANK( StorageLocation_CallA__c ), StorageLocation__r.IsPerson__c = TRUE ) ,StorageLocation__r.PersonContact.LastName &amp; StorageLocation__r.FirstName,
 StorageLocation__r.AccountAbbreviation__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>保管先名略称</label>
    <type>Text</type>
</CustomField>