force-app/main/default/objects/PickupRequest__c/fields/StorageLocation_CallA__c.field-meta.xml
<CustomField>
    <fullName>StorageLocation_CallA__c</fullName>
    <label>保管先名2</label>
    <length>50</length>
    <type>Text</type>
</CustomField>