force-app/main/default/objects/PickupRequest__c/fields/StorageLocation_Person__c.field-meta.xml
<CustomField>
    <fullName>StorageLocation_Person__c</fullName>
    <label>保管先担当</label>
    <length>50</length>
    <type>Text</type>
</CustomField>