force-app/main/default/objects/PickupRequest__c/fields/StorageLocation_Person_MVR__c.field-meta.xml
<CustomField>
    <fullName>StorageLocation_Person_MVR__c</fullName>
    <formula>StorageLocation_Person__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>保管先担当（MVR）</label>
    <type>Text</type>
</CustomField>