force-app/main/default/objects/PickupRequest__c/fields/StorageLocationAddress__c.field-meta.xml
<CustomField>
    <fullName>StorageLocationAddress__c</fullName>
    <label>使用不可_保管先住所</label>
    <length>255</length>
    <type>Text</type>
</CustomField>