force-app/main/default/objects/PickupRequest__c/fields/StorageLocationAddress_MVR__c.field-meta.xml
<CustomField>
    <fullName>StorageLocationAddress_MVR__c</fullName>
    <formula>Storage_Location_Address__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>保管先住所（MVR）</label>
    <type>Text</type>
</CustomField>