force-app/main/default/objects/PickupRequest__c/fields/StorageLocationPostalcode__c.field-meta.xml
<CustomField>
    <fullName>StorageLocationPostalcode__c</fullName>
    <description>佐野作成(喜多依頼分)</description>
    <label>保管先郵便番号</label>
    <length>8</length>
    <type>Text</type>
</CustomField>