force-app/main/default/objects/PickupRequest__c/fields/StorageLocationTell_MVR__c.field-meta.xml
<CustomField>
    <fullName>StorageLocationTell_MVR__c</fullName>
    <formula>StorageLocationTell__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>保管先電話番号（MVR）</label>
    <type>Text</type>
</CustomField>