force-app/main/default/objects/PickupRequest__c/fields/Summary_AccountName_MVR__c.field-meta.xml
<CustomField>
    <fullName>Summary_AccountName_MVR__c</fullName>
    <description>喜多</description>
    <formula>IF( NOT( ISBLANK( Case__c)) , Case__r.Account__r.LastName &amp; Case__r.Account__r.FirstName ,
IF( PurchaseOpportunity__r.Account__r.IsPerson__c = TRUE, PurchaseOpportunity__r.Account__r.PersonContact.LastName &amp; PurchaseOpportunity__r.Account__r.PersonContact.FirstName ,
IF( AccountName_MVR__c =&quot;ソコカラセレクト岸和田&quot;,&quot;株式会社ソコカラリテイリング&quot;,
PurchaseOpportunity__r.Account__r.SummaryAccount__c )))</formula>
    <label>集計先（MVR）</label>
    <type>Text</type>
</CustomField>