force-app/main/default/objects/PickupRequest__c/fields/Supplier_Master_Registered__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Master_Registered__c</fullName>
    <defaultValue>false</defaultValue>
    <description>喜多</description>
    <label>仕入先マスタ登録済み</label>
    <type>Checkbox</type>
</CustomField>