force-app/main/default/objects/PickupRequest__c/fields/Time_specification__c.field-meta.xml
<CustomField>
    <fullName>Time_specification__c</fullName>
    <description>与儀</description>
    <label>確定時間指定</label>
    <length>50</length>
    <type>Text</type>
</CustomField>