force-app/main/default/objects/PickupRequest__c/fields/Transportation__c.field-meta.xml
<CustomField>
    <fullName>Transportation__c</fullName>
    <description>喜多</description>
    <label>陸送</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>直搬入</fullName>
            </value>
            <value>
                <fullName>ヤード</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>