force-app/main/default/objects/PickupRequest__c/fields/TransportCompany__c.field-meta.xml
<CustomField>
    <fullName>TransportCompany__c</fullName>
    <label>引取業者</label>
    <type>TextArea</type>
</CustomField>