force-app/main/default/objects/PickupRequest__c/fields/TransportCompany_Info_MVR__c.field-meta.xml
<CustomField>
    <fullName>TransportCompany_Info_MVR__c</fullName>
    <description>山本</description>
    <formula>Case__r.TransportCompany_Info__c</formula>
    <label>提携業者への連絡事項（MVR）</label>
    <type>Text</type>
</CustomField>