force-app/main/default/objects/PickupRequest__c/fields/TransportCompany_MVR__c.field-meta.xml
<CustomField>
    <fullName>TransportCompany_MVR__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>引取業者（MVR）</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.MVR__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>引取業者（MVR）</relationshipLabel>
    <relationshipName>TransportCompany_MVR</relationshipName>
    <type>Lookup</type>
</CustomField>