force-app/main/default/objects/PickupRequest__c/fields/TransportFee_after__c.field-meta.xml
<CustomField>
    <fullName>TransportFee_after__c</fullName>
    <description>佐野作成(喜多依頼分)</description>
    <label>陸送料金（依頼後）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>