force-app/main/default/objects/PickupRequest__c/fields/URL__c.field-meta.xml
<CustomField>
    <fullName>URL__c</fullName>
    <description>佐野作成(喜多依頼分)</description>
    <formula>&quot;https://hanamaru870.lightning.force.com/&quot;&amp;Id</formula>
    <label>引取依頼URL</label>
    <type>Text</type>
</CustomField>