force-app/main/default/objects/PickupRequest__c/fields/URL_AdditionalImage__c.field-meta.xml
<CustomField>
    <fullName>URL_AdditionalImage__c</fullName>
    <description>買取商談の追加画像URLを表示。山本</description>
    <formula>PurchaseOpportunity__r.URL_AdditionalImage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>買取商談の追加画像URLを表示</inlineHelpText>
    <label>追加画像用URL</label>
    <type>Text</type>
</CustomField>