force-app/main/default/objects/PickupRequest__c/fields/vehicle_width__c.field-meta.xml
<CustomField>
    <fullName>vehicle_width__c</fullName>
    <description>与儀</description>
    <label>幅</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>