force-app/main/default/objects/PickupRequest__c/fields/VehicleCondition__c.field-meta.xml
<CustomField>
    <fullName>VehicleCondition__c</fullName>
    <label>車両状態</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>自走可</fullName>
            </value>
            <value>
                <fullName>自走可（修理完了）</fullName>
            </value>
            <value>
                <fullName>自走少し可（ゼロ可）</fullName>
            </value>
            <value>
                <fullName>自走少し可（ゼロ不可）</fullName>
            </value>
            <value>
                <fullName>自走不可（転がる）</fullName>
            </value>
            <value>
                <fullName>自走不可（転がらない）</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>