force-app/main/default/objects/PickupRequest__c/fields/VehicleCondition_MVR__c.field-meta.xml
<CustomField>
    <fullName>VehicleCondition_MVR__c</fullName>
    <formula>TEXT( VehicleCondition__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>車両状態（MVR）</label>
    <type>Text</type>
</CustomField>