force-app/main/default/objects/PickupRequest__c/fields/VehicleConditionSl_MVR__c.field-meta.xml
<CustomField>
    <fullName>VehicleConditionSl_MVR__c</fullName>
    <description>山本</description>
    <formula>IF(NOT(ISBLANK( Case__c) ),Case__r.VehicleCondition_hs__c, PurchaseOpportunity__r.BugContent__c )</formula>
    <label>車両状態補足（MVR）</label>
    <type>Text</type>
</CustomField>