force-app/main/default/objects/PickupRequest__c/fields/VehicleConditionSupplement__c.field-meta.xml
<CustomField>
    <fullName>VehicleConditionSupplement__c</fullName>
    <description>佐野</description>
    <formula>IF(NOT(ISBLANK( Case__c) ),Case__r.VehicleCondition_hs__c, PurchaseOpportunity__r.BugContent__c )</formula>
    <label>車両状態補足</label>
    <type>Text</type>
</CustomField>