force-app/main/default/objects/PickupRequest__c/fields/VehicleInspection__c.field-meta.xml
<CustomField>
    <fullName>VehicleInspection__c</fullName>
    <description>山本</description>
    <formula>TEXT( Case__r.VehicleInspection__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>車検有無</label>
    <type>Text</type>
</CustomField>