force-app/main/default/objects/PickupRequest__c/fields/YardData__c.field-meta.xml
<CustomField>
    <fullName>YardData__c</fullName>
    <label>ヤードデータ</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>必要（VRなし）</fullName>
            </value>
            <value>
                <fullName>必要（VRあり・音声データなし）</fullName>
            </value>
            <value>
                <fullName>必要（VRあり・音声データあり）</fullName>
            </value>
            <value>
                <fullName>不要（他社オク等）</fullName>
            </value>
            <value>
                <fullName>不要（解体）</fullName>
            </value>
            <value>
                <fullName>Bデータ</fullName>
            </value>
            <value>
                <fullName>カーセンサー掲載用</fullName>
            </value>
            <value>
                <fullName>必要</fullName>
                <isActive>false</isActive>
                <label>必要</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>