force-app/main/default/objects/PickupRequest__c/fields/ZERO_DateTime__c.field-meta.xml
<CustomField>
    <fullName>ZERO_DateTime__c</fullName>
    <label>ゼロシステム連携日時</label>
    <type>DateTime</type>
</CustomField>