force-app/main/default/objects/PickupRequest__c/fields/ZERO_Progress_DateTime__c.field-meta.xml
<CustomField>
    <fullName>ZERO_Progress_DateTime__c</fullName>
    <description>レポート管理のために作成</description>
    <formula>IF(
  NOT(ISBLANK(  ZERO_DateTime__c  )),
  (NOW() - ZERO_DateTime__c) * 24,
  NULL
)</formula>
    <label>ゼロシステム連携経過日時</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>