force-app/main/default/objects/PickupRequest__c/fields/ZeroSystemCooperation__c.field-meta.xml
<CustomField>
    <fullName>ZeroSystemCooperation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>佐野作成(喜多依頼分)</description>
    <label>ゼロシステム連携</label>
    <type>Checkbox</type>
</CustomField>