force-app/main/default/objects/PickupRequest__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Owner__c</columns>
    <columns>NAME</columns>
    <columns>PurchaseOpportunity__c</columns>
    <columns>Case__c</columns>
    <columns>BC__c</columns>
    <columns>ScheduleAdjustmentRequestDate__c</columns>
    <columns>ScheduledPickupDate__c</columns>
    <columns>StorageLocation__c</columns>
    <columns>StorageLocation_CallA__c</columns>
    <columns>StorageLocationAddress__c</columns>
    <columns>RegularHoliday__c</columns>
    <columns>RequestDestination__c</columns>
    <columns>Setup_staff__c</columns>
    <columns>Mst_Models_formula__c</columns>
    <columns>CarNo__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CollectionRequestSubject__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>すべて選択</label>
</ListView>